--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -55,6 +55,7 @@
   transform: scale(1.05);
 }
 
+
 .dog-list {
   display: flex;
   flex-direction: row;
@@ -84,6 +85,33 @@
   transform: scale(1.1);
 }
 
+.profile-content {
+  box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  display:flex;
+}
+.profile-picture {
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.2);
+  width: 300px;
+  height: 300px;
+  margin-top: 30px;
+  margin-left: 30px;
+  border-radius: 10%;
+}
+
+.profile-description {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-left: 100px;
+  margin-bottom: 30px;
+}
+
+.profile-button {
+  bottom:0;
+}
 .contact-info {
   display: block;
   flex-direction: column;
